[package]
name = "endian-type"
version = "0.1.2"
authors = ["Lolirofle <lolipopple@hotmail.com>"]
description = "Type safe wrappers for types with a defined byte order"
#documentation = "..."
homepage = "https://github.com/Lolirofle/endian-type"
repository = "https://github.com/Lolirofle/endian-type.git"
#readme = "README.md"
keywords = ["endian","byteorder"]
license = "MIT"

[features]
default = []
sgx = ["sgx_tstd"]

[dependencies]
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/apache/mesatee-sgx.git", package="sgx_tstd", optional=true  }
